--- a/Exercise1/exercise1.ipynb
+++ b/Exercise1/exercise1.ipynb
@@ -18,8 +18,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "t = np.arange(0.0, 2.0, 0.01)\n",
+    "s = 1 + np.sin(2*np.pi*t)\n",
+    "plt.plot(t, s)\n",
+    "\n",
+    "plt.xlabel('time (s)')\n",
+    "plt.ylabel('voltage (mV)')\n",
+    "plt.title('About as simple as it gets, folks')\n",
+    "plt.grid(True)\n",
+    "plt.savefig(\"test.png\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +48,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmpl_toolkits\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmplot3d\u001b[39;00m \u001b[39mimport\u001b[39;00m Axes3D  \u001b[39m# needed to plot 3-D surfaces\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# library written for this exercise providing additional functions for assignment submission, and others\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mutils\u001b[39;00m \n\u001b[1;32m     14\u001b[0m \u001b[39m# define the submission/grader object for this exercise\u001b[39;00m\n\u001b[1;32m     15\u001b[0m grader \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39mGrader()\n",
+      "Cell \u001b[0;32mIn [2], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmpl_toolkits\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmplot3d\u001b[39;00m \u001b[39mimport\u001b[39;00m Axes3D  \u001b[39m# needed to plot 3-D surfaces\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# library written for this exercise providing additional functions for assignment submission, and others\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mutils\u001b[39;00m \n\u001b[1;32m     14\u001b[0m \u001b[39m# define the submission/grader object for this exercise\u001b[39;00m\n\u001b[1;32m     15\u001b[0m grader \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39mGrader()\n",
       "File \u001b[0;32m~/Documents/GitHub/ml-coursera-python-assignments/Exercise1/utils.py:5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m      3\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39m\u001b[39m..\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msubmission\u001b[39;00m \u001b[39mimport\u001b[39;00m SubmissionBase\n\u001b[1;32m      8\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mGrader\u001b[39;00m(SubmissionBase):\n\u001b[1;32m      9\u001b[0m     X1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcolumn_stack((np\u001b[39m.\u001b[39mones(\u001b[39m20\u001b[39m), np\u001b[39m.\u001b[39mexp(\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mexp(\u001b[39m2\u001b[39m) \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m0.1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m20\u001b[39m)))\n",
       "File \u001b[0;32m~/Documents/GitHub/ml-coursera-python-assignments/Exercise1/../submission.py:7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m OrderedDict\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSubmissionBase\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     submit_url \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhttps://www.coursera.org/api/onDemandProgrammingScriptSubmissions.v1?includes=evaluation\u001b[39m\u001b[39m'\u001b[39m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
@@ -44,7 +63,7 @@
     "import numpy as np\n",
     "\n",
     "# Plotting library\n",
-    "from matplotlib import pyplot\n",
+    "# from matplotlib import pyplot\n",
     "from mpl_toolkits.mplot3d import Axes3D  # needed to plot 3-D surfaces\n",
     "\n",
     "# library written for this exercise providing additional functions for assignment submission, and others\n",
